# fastann

./: .gitignore  Cargo.toml  README.md
benches/: bench_metrics.rs
example/: Cargo.toml
example/src/: ann_bench.rs  bench.rs  lib.rs  main.rs
src/: fastann.rs  lib.rs  main.rs
src/annoy/: annoy.rs  def.rs  mod.rs  random.rs
src/bench/: ann_bench.rs  bench.rs  dataset.sh  load_dataset.sh  mod.rs
src/bf/: bf.rs  mod.rs
src/bforest/: bforest.rs  mod.rs
src/bpforest/: bpforest.rs  mod.rs
src/common/: calc.rs  metrics.rs  mod.rs  neighbor.rs  node.rs
src/core/: ann_index.rs  arguments.rs  calc.rs  dtype.rs  heap.rs  kmeans.rs  knn.rs  metrics.rs  mod.rs  neighbor.rs  node.rs  parameters.rs  random.rs  simd.rs  simd_metrics.rs  transformer.rs
src/demo/: demo.rs
src/flat/: flat.rs
src/hnsw/: hnsw.rs  mod.rs
src/lsh/: lsh.rs
src/mrng/: mod.rs  ssg.rs
src/pq/: mod.rs  pq.rs
