[package]
authors = ["aljun <gagasalamer@outlook.com>"]
edition = "2018"
name = "fastann"
version = "0.1.0"

[features]
simd = ["packed_simd"]
without_std = ["hashbrown"]

[dependencies]
hashbrown = { version = "0.9.1", optional = true }
log = "0.4"
num = "0.3.1"
pprof = {version = "0.4", features = ["flamegraph"]}
prgrs = "0.6.4"
rand = "0.7.3"
rayon = "1.5"
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3.2"
packed_simd = { version = "0.3.4", package = "packed_simd_2", optional = true}
smallvec = { version = "1.6.1", features = ["serde"]}