[package]
authors = ["aljun <gagasalamer@outlook.com>"]
edition = "2018"
name = "fastann"
version = "0.1.0"

[profile.dev]
codegen-units = 4 
debug = 1 # required for line numbers in tests, see tikv #5049
debug-assertions = true 
incremental = true 
lto = false 
opt-level = 0 
overflow-checks = false 
panic = 'unwind' 
rpath = false 

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false

[features]
simd = ["packed_simd"]
use_smallvec = ["smallvec"]
use_smallvec_128 = ["use_smallvec"]
without_std = ["hashbrown"]

[dependencies]
bincode = "1.3.2"
fixedbitset = "0.4.0"
hashbrown = {version = "0.9.1", optional = true}
log = "^0.4"
num = "0.3.1"
packed_simd = {version = "0.3.4", package = "packed_simd_2", optional = true}
pprof = {version = "0.4", features = ["flamegraph"]}
prgrs = "0.6.4"
rand = "0.7.3"
rayon = "^1.5"
serde = {version = "1.0", features = ["derive"]}
smallvec = {version = "1.6.1", features = ["serde"], optional = true}
