[package]
name = "example"
version = "0.1.0"
authors = ["salamer <salamer_gaga@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastann = { package = "fastann", path = "../../fastann"}
pprof = {version = "0.4.3", features = ["flamegraph"]}
# pprof = {version = "0.4.3"}
prgrs = "0.6.4"
hdf5 = {version = "0.7.1"}
rayon = "^1.5"
rand = "0.7.3"