[package]
name = "example"
version = "0.1.0"
authors = ["salamer <salamer_gaga@163.com>"]
edition = "2018"

[profile.dev]
codegen-units = 4 
debug = 1 # required for line numbers in tests, see tikv #5049
debug-assertions = true 
incremental = true 
lto = false 
opt-level = 0 
overflow-checks = false 
panic = 'unwind' 
rpath = false 

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false

[dependencies]
fastann = { package = "fastann", path = "../../fastann", features=["simd"]}
pprof = {version = "0.4.3", features = ["flamegraph"]}
# pprof = {version = "0.4.3"}
prgrs = "0.6.4"
hdf5 = {version = "0.7.1"}
rayon = "^1.5"
rand = "0.7.3"